brands swagger api update
